# artisDX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.bat
assets/: cuberotated.glb  e.glb  elicube.glb  helmet.glb  helmet_blend.glb  helmet_blend_180.glb  movedcube.glb  uv_debug.glb
include/: AABB.h  Application.h  Camera.h  CommandQueue.h  Culler.h  D3D12Core.h  Defines.h  DescriptorAllocator.h  FrustumCuller.h  GLTFLoader.h  GUI.h  GraphicsDevice.h  IGUIComponent.h  ImGuiRenderer.h  Light.h  Material.h  Mesh.h  MeshInstance.h  Model.h  ModelManager.h  ModelNode.h  Primitive.h  Renderer.h  Structs.h  Swapchain.h  Texture.h  Window.h  pch.h
include/precompiled/: pch.h
shaders/: basic_frag.fx  basic_frag.hlsl  basic_vert.fx  basic_vert.hlsl  bb_frag.hlsl  bb_vert.hlsl  dShadowMap_frag.hlsl  dShadowmap_vert.hlsl  frag.fx  normal_frag.fx  normal_frag.hlsl  normal_vert.fx  normal_vert.hlsl  normalmapping_frag.fx  normalmapping_vert.fx  pbr_frag.fx  pbr_frag.hlsl  pbr_vert.fx  pbr_vert.hlsl  triangle.frag.dxbc  triangle.frag.hlsl  triangle.vert.dxbc  triangle.vert.hlsl  vert.fx
src/: AABB.cpp  AABB.h  Application.cpp  Application.h  Camera.cpp  Camera.h  CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  Culler.cpp  D3D12Core.cpp  D3D12Core.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DirectionalLight.cpp  DirectionalLight.h  FrustumCuller.cpp  GLTFLoader.cpp  GLTFLoader.h  GUI.cpp  GUI.h  GraphicsDevice..cpp  GraphicsDevice.cpp  GraphicsDevice.h  IGUIComponent.cpp  IGUIComponent.h  ImGuiRenderer.cpp  Light.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  ModelNode.cpp  ModelNode.h  (+20 more)
